--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "bootstrap": "^5.2.3",
     "luxon": "^3.3.0",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
