--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "luxon": "^3.3.0",
+    "sweetalert2": "^11.7.3",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
