--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "braintree-web": "^2.32.1",
     "luxon": "^3.3.0",
     "sweetalert2": "^11.7.3",
     "vue": "^3.2.45",
